@@ -45,6 +45,7 @@ Version 0.6 - TBD
   * Added a new plugin: link-icons. [OFB]
   * Seperated the plugins tests into their own file. [OFB]
   * Re-structured some of the tests.html sections. [OFB]
+  * Added class ".colborder" to grid.css. [OFB]
 	
 
 Version 0.5 - 28/8/2007
